# CanTraceDiag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit-bout-en-bout-2026-07-15.md  audit-code-2026-07-23.md  audit-complet-2026-07-16.md  audit-refonte-full-frontend-2026-07-22.md  besoin-et-choix.md  design-ui.md  product-backlog.md  product-brief.md  pwa-full-frontend-post-audit-evidence-2026-07-22.md  pwa-full-frontend-provenance-2026-07-22.md  roadmap.md
docs/adr/: 0001-application-web-locale.md  0002-format-asc-et-cache-local.md  0003-curseurs-et-graphes.md  0004-donnees-locales-hors-depot.md  0005-identite-ui-instrument.md  0006-workspace-local-persistant.md  0007-livraison-frontend-modules-et-cache.md
logics/: INDEX.md  instructions.md
logics/architecture/: adr_002_adr_architecture_cantracediag_mvp.md
logics/backlog/: item_001_mvp_analyse_locale_traces_can_asc.md  item_002_ameliorer_le_mvp_cantracediag_pour_l_analyse_diagnostic.md  item_003_p0_retablir_la_confiance_dbc_la_securite_ui_et_la_ci.md  item_004_p1_rendre_import_robuste_et_scalable.md  item_005_p1_completer_le_workflow_diagnostic.md  item_006_p1_rendre_interface_responsive_et_accessible.md  (+31 more)
scripts/: CanTraceDiag.cmd  benchmark_lazy_decode.py  capture-readme-screenshots.py  install-shortcut.ps1
tests/: conftest.py  test_api.py  test_asc.py  test_cli.py  test_dbc_decode.py  test_diagnostic.py  test_e2e_ui.py  test_export.py  test_imports.py  test_paths.py  test_perf_budget.py  test_security.py  test_store_pipeline.py  test_trace_nav.py  test_workspace.py
(+127 files in other folders)
