[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cantracediag"
version = "0.1.0"
description = "Analyse et relecture de traces CANalyzer avec DBC."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cantools>=40",
  "duckdb>=1.1",
  "pandas>=2.2",
  "pyarrow>=17",
  "python-can>=4.4",
  "typer>=0.12",
]

[project.scripts]
cantracediag = "cantracediag.cli:main"

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cantracediag = ["web/*.html", "web/*.js", "web/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer and FastAPI require calls (Argument/Option/File) in argument defaults.
"src/cantracediag/cli.py" = ["B008"]
"src/cantracediag/api.py" = ["B008"]
